# Fogpass_Shallow1

./: CMakeLists.txt
fogpass/Backend/Power/: CMakeLists.txt  battery.cpp
fogpass/Backend/fogpassd/: CMakeLists.txt
fogpass/Backend/fogpassd/src/: gnss_reader.cpp
fogpass/backend/audio-service/: README.md
fogpass/backend/battery-service/: README.md
fogpass/backend/fogpassd/: CMakeLists.txt
fogpass/backend/fogpassd/include/: alert_manager.h  gnss_reader.h  ipc_handler.h  landmark_engine.h  locator.h
fogpass/backend/fogpassd/src/: alert_manager.cpp  gnss_reader.cpp  ipc_handler.cpp  landmark_engine.cpp  locator.cpp  main.cpp
fogpass/backend/imu-service/: README.md
fogpass/backend/ota-service/: README.md
fogpass/backend/usb-service/: README.md
fogpass/configs/: fogpass.conf  gnss.conf  landmarks.csv  ota.conf  ui.conf
fogpass/docs/architecture/: README.md
fogpass/docs/hardware/: README.md
fogpass/docs/ipc/: README.md
fogpass/docs/requirements/: README.md
fogpass/ipc/dbus/: README.md
fogpass/ipc/sockets/: README.md
fogpass/route-tools/csv-converter/: README.md
fogpass/route-tools/route-validator/: README.md
fogpass/route-tools/trip-analyzer/: README.md
fogpass/scripts/: export_logs.sh  install.sh  mount_usb.sh  replay_gnss.py
fogpass/systemd/: audio.service  battery.service  fogpass-ui.service  fogpassd.service  imu.service  ota.service  usb.service
fogpass/ui/: CMakeLists.txt
fogpass/ui/qml/: LandmarkList.qml  Main.qml  Settings.qml  Speed.qml  TopBar.qml
fogpass/yocto/meta-fogpass/recipes-backend/: README.md
fogpass/yocto/meta-fogpass/recipes-config/: README.md
fogpass/yocto/meta-fogpass/recipes-image/: README.md
fogpass/yocto/meta-fogpass/recipes-ui/: README.md
